# IsoSpec

./: .gitignore  CHANGELOG  CMakeLists.txt  INSTALL  LICENCE  Makefile  NANOBIND_CONVERSION.md  NANOBIND_CONVERSION_SUMMARY.md  README  README.md  TODO.md  _config.yml  index.html  index.md  params.json  pyproject.toml  reinstall.sh  setup.py
Examples/: CMakeLists.txt
Examples/C++/: COMPILING  radiolabelling.cpp  water.cpp
Examples/Python/: binned_spectrum.py  custom_elements.py  fasta.py  isospec2pandasDF.py  isotopic_labelling.py  radiolabelling.py  using_fastas.py  water.py
Examples/R/: radiolabelling.R  water.R
IsoSpec++/: CMakeLists.txt  CPPLINT.cfg  Makefile  allocator.cpp  allocator.h  allocator.hpp  array.cpp  array.h  btrd.h  conf.h  conf.hpp  cwrapper.cpp  cwrapper.h  dirtyAllocator.cpp  dirtyAllocator.h  dirtyAllocator.hpp  element_tables.cpp  element_tables.h  fasta.cpp  fasta.h  fixedEnvelopes.cpp  fixedEnvelopes.h  isoMath.cpp  isoMath.h  isoMath.hpp  isoSpec++.cpp  isoSpec++.h  isoSpec++.hpp  lang.h  logFactorial.cpp  marginalTrek++.cpp  marginalTrek++.h  marginalTrek++.hpp  misc.cpp  misc.h  misc.hpp  mman.cpp  mman.h  oldIsoSpec++.cpp  operators.cpp  (+17 more)
man/: CMakeLists.txt  doxyfile
man/html/: _formulas.tex  allocator_8cpp_source.html  allocator_8h_source.html  annotated.html  class_iso_spec_1_1_allocator-members.html  class_iso_spec_1_1_allocator.html  class_iso_spec_1_1_conf_equal-members.html  class_iso_spec_1_1_conf_equal.html  class_iso_spec_1_1_conf_order-members.html  class_iso_spec_1_1_conf_order.html  class_iso_spec_1_1_conf_order_marginal-members.html  class_iso_spec_1_1_conf_order_marginal.html  class_iso_spec_1_1_conf_order_marginal_descending-members.html  class_iso_spec_1_1_conf_order_marginal_descending.html  class_iso_spec_1_1_dirty_allocator-members.html  class_iso_spec_1_1_dirty_allocator.html  class_iso_spec_1_1_iso-members.html  class_iso_spec_1_1_iso.html  class_iso_spec_1_1_iso__coll__graph.dot  class_iso_spec_1_1_iso__coll__graph.md5  class_iso_spec_1_1_iso__inherit__graph.dot  class_iso_spec_1_1_iso__inherit__graph.md5  class_iso_spec_1_1_iso_generator-members.html  class_iso_spec_1_1_iso_generator.html  class_iso_spec_1_1_iso_generator__coll__graph.dot  class_iso_spec_1_1_iso_generator__coll__graph.md5  class_iso_spec_1_1_iso_generator__inherit__graph.dot  class_iso_spec_1_1_iso_generator__inherit__graph.md5  class_iso_spec_1_1_iso_layered_generator-members.html  class_iso_spec_1_1_iso_layered_generator.html  class_iso_spec_1_1_iso_layered_generator__coll__graph.dot  class_iso_spec_1_1_iso_layered_generator__coll__graph.md5  class_iso_spec_1_1_iso_layered_generator__inherit__graph.dot  class_iso_spec_1_1_iso_layered_generator__inherit__graph.md5  class_iso_spec_1_1_iso_ordered_generator-members.html  class_iso_spec_1_1_iso_ordered_generator.html  class_iso_spec_1_1_iso_ordered_generator__coll__graph.dot  class_iso_spec_1_1_iso_ordered_generator__coll__graph.md5  class_iso_spec_1_1_iso_ordered_generator__inherit__graph.dot  class_iso_spec_1_1_iso_ordered_generator__inherit__graph.md5  (+152 more)
man/html/search/: all_0.js  all_1.js  all_11.js  all_2.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  (+11 more)
man/latex/: annotated.tex  class_iso_spec_1_1_allocator.tex  class_iso_spec_1_1_conf_equal.tex  class_iso_spec_1_1_conf_order.tex  class_iso_spec_1_1_conf_order_marginal.tex  class_iso_spec_1_1_conf_order_marginal_descending.tex  class_iso_spec_1_1_dirty_allocator.tex  class_iso_spec_1_1_iso.eps  class_iso_spec_1_1_iso.tex  class_iso_spec_1_1_iso.tex.tmp  class_iso_spec_1_1_iso__coll__graph.dot  class_iso_spec_1_1_iso__coll__graph.md5  class_iso_spec_1_1_iso__inherit__graph.dot  class_iso_spec_1_1_iso__inherit__graph.md5  class_iso_spec_1_1_iso_generator.eps  class_iso_spec_1_1_iso_generator.tex  class_iso_spec_1_1_iso_generator__coll__graph.dot  class_iso_spec_1_1_iso_generator__coll__graph.md5  class_iso_spec_1_1_iso_generator__inherit__graph.dot  class_iso_spec_1_1_iso_generator__inherit__graph.md5  class_iso_spec_1_1_iso_layered_generator.eps  class_iso_spec_1_1_iso_layered_generator.tex  class_iso_spec_1_1_iso_layered_generator__coll__graph.dot  class_iso_spec_1_1_iso_layered_generator__coll__graph.md5  class_iso_spec_1_1_iso_layered_generator__inherit__graph.dot  class_iso_spec_1_1_iso_layered_generator__inherit__graph.md5  class_iso_spec_1_1_iso_ordered_generator.eps  class_iso_spec_1_1_iso_ordered_generator.tex  class_iso_spec_1_1_iso_ordered_generator__coll__graph.dot  class_iso_spec_1_1_iso_ordered_generator__coll__graph.md5  class_iso_spec_1_1_iso_ordered_generator__inherit__graph.dot  class_iso_spec_1_1_iso_ordered_generator__inherit__graph.md5  class_iso_spec_1_1_iso_spec_1_1_conf_equal.tex  class_iso_spec_1_1_iso_spec_1_1_conf_order.tex  class_iso_spec_1_1_iso_spec_1_1_conf_order_marginal.tex  class_iso_spec_1_1_iso_spec_1_1_conf_order_marginal_descending.tex  class_iso_spec_1_1_iso_spec_1_1_key_hasher.tex  class_iso_spec_1_1_iso_spec_1_1_reverse_order.tex  class_iso_spec_1_1_iso_spec_1_1_table_order.tex  class_iso_spec_1_1_iso_threshold_generator.eps  (+46 more)
man/man/man3/: IsoSpec.3  IsoSpec_Allocator.3  IsoSpec_ConfEqual.3  IsoSpec_ConfOrder.3  IsoSpec_ConfOrderMarginal.3  IsoSpec_ConfOrderMarginalDescending.3  IsoSpec_Iso.3  (+27 more)
skbuild/: CMakeLists.txt
src/IsoSpec++/: CMakeLists.txt  CPPLINT.cfg  Makefile  allocator.cpp  cwrapper.cpp  cwrapper.h  element_tables.cpp  element_tables.h  fasta.cpp  fasta.h  fixedEnvelopes.cpp  fixedEnvelopes.h  isoMath.cpp  isoMath.h  isoSpec++.cpp  isoSpec++.h  marginalTrek++.cpp  marginalTrek++.h  misc.cpp  misc.h  operators.h  platform.h  pod_vector.h  python-build.cpp
(+244 files in other folders)
