[build-system]
requires = ["setuptools", "scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.source-dir = "skbuild"

[project]
name = "IsoSpecPy"
dependencies = ["cffi"]
description = "IsoSpecPy is a Python library for computing isotopic distributions of molecules."
version = "2.3.0dev5"

[project.optional-dependencies]
testing = ["pytest", "numpy", "OldIsoSpecPy @ https://files.pythonhosted.org/packages/67/cc/3ef37989d44c0ec2437bc14ac8665016b4bca0d1daf823064c6dd0ce7532/oldisospecpy-1.0.14.tar.gz"]

[tool.pytest.ini_options]
testpaths = ["tests/Python"]

[tool.cibuildwheel]
enable = ["pypy"]
skip = ["cp36-*", "cp37-*"]
test-command = "python -m pytest {project}/tests/Python"
#test-sources = ["tests/Python"]
test-extras = ["testing"]