[build-system]
requires = ["setuptools", "scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.source-dir = "skbuild"

[project]
name = "IsoSpecPy"
dependencies = ["cffi"]
description = "IsoSpecPy is a Python library for computing isotopic distributions of molecules."
version = "2.3.0dev5"

[project.optional-dependencies]
testing = ["pytest", "numpy", "OldIsoSpecPy @ https://files.pythonhosted.org/packages/43/9a/dbdda1351303318aca1bee7d8ad2a7cf5b466f2b1b1005d78013904bff1c/oldisospecpy-1.0.15.tar.gz"]

[tool.pytest.ini_options]
testpaths = ["tests/Python"]

[tool.cibuildwheel]
enable = ["pypy"]
skip = ["cp36-*", "cp37-*"]
test-command = "python -m pytest {project}/tests/Python"
#test-sources = ["tests/Python"]
test-extras = ["testing"]